# arcrc

./: .pre-commit-config.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: README.md  examples.md
src/: bench.py
src/ascrc/: __init__.py  crc_module.py
tests/: test_crc.py
