[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "arcrc"
version = "0.1.7"
description = "Autosar CRC-8, CRC-16-CCITT und CRC-32 (IEEE) – Runtime- and Tablevariants"
authors = [
    { name = "Christoph Schueler", email = "cpu12.gems@googlemail.com" },
]
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/christoph2/arcrc"
Repository = "https://github.com/christoph2/arcrc"

[project.optional-dependencies]
dev = ["pytest", "bumpver", "pre-commit"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.c", "*.h"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.bumpver]
current_version = "0.1.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"'
]
